// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body page should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="header"
      >
        <span
          class="header-title"
        >
          Book An Appointment With Your Doctor
        </span>
        <div
          class="header-book-btn-space"
        >
          <span
            class="header-book-btn"
          >
            <a
              href="/signin"
            >
              Sign In
            </a>
          </span>
          <span
            class="space"
          >
                  
          </span>
          <span
            class="header-book-btn-signup"
          >
            <a
              href="/signup"
            >
              Sign Up
            </a>
          </span>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="header"
    >
      <span
        class="header-title"
      >
        Book An Appointment With Your Doctor
      </span>
      <div
        class="header-book-btn-space"
      >
        <span
          class="header-book-btn"
        >
          <a
            href="/signin"
          >
            Sign In
          </a>
        </span>
        <span
          class="space"
        >
                
        </span>
        <span
          class="header-book-btn-signup"
        >
          <a
            href="/signup"
          >
            Sign Up
          </a>
        </span>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SideBar page should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="sidebar"
      >
        <div
          class="sidebar-header"
        >
          <div
            class="sidebar-header-icon"
          >
            <img
              alt="Our logo"
              class="logo"
              src="logo.png"
            />
          </div>
        </div>
        <ul
          class="sidebar-list"
        >
          <li
            class="sidebar-item"
          >
            <a
              class="link"
              href="/main"
            >
              DOCTORS
            </a>
          </li>
          <li
            class="sidebar-item"
          >
            <a
              class="link"
              href="/add_doctor"
            >
              ADD DOCTOR
            </a>
          </li>
          <li
            class="sidebar-item"
          >
            <a
              class="link"
              href="/doctors/delete"
            >
              DELETE DOCTOR
            </a>
          </li>
          <li
            class="sidebar-item"
          >
            <a
              class="link"
              href="/reserve"
            >
              RESERVE
            </a>
          </li>
          <li
            class="sidebar-item"
          >
            <a
              class="link"
              href="/reservations"
            >
              MY RESERVATIONS
            </a>
          </li>
        </ul>
        <a
          class="link sign-out-side"
          href="/signin"
        >
          Sign Out
        </a>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sidebar"
    >
      <div
        class="sidebar-header"
      >
        <div
          class="sidebar-header-icon"
        >
          <img
            alt="Our logo"
            class="logo"
            src="logo.png"
          />
        </div>
      </div>
      <ul
        class="sidebar-list"
      >
        <li
          class="sidebar-item"
        >
          <a
            class="link"
            href="/main"
          >
            DOCTORS
          </a>
        </li>
        <li
          class="sidebar-item"
        >
          <a
            class="link"
            href="/add_doctor"
          >
            ADD DOCTOR
          </a>
        </li>
        <li
          class="sidebar-item"
        >
          <a
            class="link"
            href="/doctors/delete"
          >
            DELETE DOCTOR
          </a>
        </li>
        <li
          class="sidebar-item"
        >
          <a
            class="link"
            href="/reserve"
          >
            RESERVE
          </a>
        </li>
        <li
          class="sidebar-item"
        >
          <a
            class="link"
            href="/reservations"
          >
            MY RESERVATIONS
          </a>
        </li>
      </ul>
      <a
        class="link sign-out-side"
        href="/signin"
      >
        Sign Out
      </a>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
